feat: Adiciona estrutura inicial e documentação do projeto
Este commit inicializa o projeto Lyron Core com as seguintes alterações:

- **Estrutura do Projeto:** Adiciona os scripts principais para os serviços de áudio, IA, TTS e Arduino.
- **Gerenciamento de Dependências:**
  - Cria o `requirements.txt` com as dependências Python necessárias.
  - Melhora o `.gitignore` para excluir ambientes virtuais, caches, arquivos de modelo e outros artefatos desnecessários, resolvendo a lentidão dos comandos `git`.
- **Documentação:**
  - Adiciona um `README.md` detalhado com instruções completas de configuração, instalação de dependências, download de modelos e como executar o projeto.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+# Environments
 venv/
-
 .env
+
+# Python cache
+__pycache__/
+*.py[cod]
+
+# Compressed files
+*.zip
+*.tar.gz
+*.rar
+
+# Download identifiers
+*.zip:Zone.Identifier
+
+# Models (should be downloaded separately, not stored in Git)
+vosk-model-*
+/tts/piper/
+/wakewords/
+
+# Audio files
+*.wav
